AJout du marché galactique (#30)
* correction rapport

* ajout infobulle dans le rapport

* amélioration rapport

* amélioration rapport

* amélioration rapport

* amélioration rapport

* amélioration rapport

* fix PDV pour premiers arrivants

* avant modif

* ajout script de division

* suppression des bonus de race + améliorations rapport

* ajout du marché galactique

* correctifs

* correctifs

* correctifs

* correctifs

* correctifs

* correctifs