@@ -63,6 +63,8 @@ public class Univers {
 
 	private static ArrayList LEADERS_EN_VENTE;
 
+	private static ArrayList<OffreMarche> MARCHE_GALACTIQUE;
+
 	private static ArrayList TECHNOLOGIES_PUBLIQUES;
 
 	private static int NUMERO_DU_TOUR;
@@ -435,6 +437,36 @@ public class Univers {
 
 	public static void retirerLeaderEnVente(Leader l) {
 		LEADERS_EN_VENTE.remove(l);
+	}
+
+	public static void ajouterOffreMarche(OffreMarche o) {
+		MARCHE_GALACTIQUE.add(o);
+	}
+
+	public static List<OffreMarche> getListeOffresMarche() {
+		if (MARCHE_GALACTIQUE == null) return new ArrayList<OffreMarche>();
+		return MARCHE_GALACTIQUE;
+	}
+
+	public static OffreMarche getOffreMarche(int id) {
+		return MARCHE_GALACTIQUE.stream()
+				.filter(o -> o.getId() == id)
+				.findFirst()
+				.orElse(null);
+	}
+
+	public static void retirerOffreMarche(OffreMarche o) {
+		MARCHE_GALACTIQUE.remove(o);
+	}
+
+	public static int trouverProchainIdOffreMarche() {
+		int max = 0;
+		for (int i = 0; i < MARCHE_GALACTIQUE.size(); i++) {
+			OffreMarche o = MARCHE_GALACTIQUE.get(i);
+			if (o.getId() > max)
+				max = o.getId();
+		}
+		return max + 1;
 	}
 
 	public static void initialiserLeadersEnVente() {
@@ -1138,17 +1170,6 @@ public class Univers {
 			{ "Inconnu", new String[] { "moteurII", "bouclierIII", "laserIII" },
 					new int[] { 1, 1, 12 }, "Feinteur", "Fertech",
 					new Integer(4) },
-			{ "Inconnu", new String[] { "moteurII", "cyb_vs_tt_I" },
-					new int[] { 1, 1 }, "Centre de recherche", "Cybtech",
-					new Integer(5) },
-			{ "Inconnu", new String[] { "moteurII", "villeI" },
-					new int[] { 1, 1 }, "Colonie Byeril", "Cybtech",
-					new Integer(5) },
-			{ "Inconnu", new String[] { "moteurII", "cyb_vs_tc_I" },
-					new int[] { 1, 1 }, "A-M loe", "Cybtech", new Integer(5) },
-			{ "Inconnu", new String[] { "moteurII", "cyb_vs_te_I" },
-					new int[] { 1, 1 }, "SpyFlight", "Cybtech", new Integer(5) }
-
 
 	};
 
@@ -1466,8 +1487,12 @@ public class Univers {
 				TRANSFERTS = new HashMap();
 			System.out.print("l");
 			LEADERS_EN_VENTE = chargerArrayList(Chemin.LEADERS_EN_VENTE);
+			if (LEADERS_EN_VENTE == null) LEADERS_EN_VENTE = new ArrayList();
+			MARCHE_GALACTIQUE = chargerArrayList(Chemin.MARCHE_GALACTIQUE);
+			if (MARCHE_GALACTIQUE == null) MARCHE_GALACTIQUE = new ArrayList();
 			System.out.print("t");
 			TECHNOLOGIES_PUBLIQUES = chargerArrayList(Chemin.TECHNOLOGIES_PUBLIQUES);
+			if (TECHNOLOGIES_PUBLIQUES == null) TECHNOLOGIES_PUBLIQUES = new ArrayList();
 		} else {
 			COMMANDANTS = (TreeMap) chargerMap(Chemin.COMMANDANTS);
 			DEBRIS = null;
@@ -1500,7 +1525,8 @@ public class Univers {
 			sauvegarderMap(Chemin.BASE_STATS, STATS);// System.out.println(STATS.size());
 			sauvegarderMap(Chemin.RELATIONS_RACES, RELATIONS_RACES);
 			// sauvegarderMap(Chemin.TRANSFERTS,TRANSFERTS);
-			sauvegarderArrayList(Chemin.LEADERS_EN_VENTE, LEADERS_EN_VENTE);
+ 		sauvegarderArrayList(Chemin.LEADERS_EN_VENTE, LEADERS_EN_VENTE);
+ 		sauvegarderArrayList(Chemin.MARCHE_GALACTIQUE, MARCHE_GALACTIQUE);
 			sauvegarderArrayList(Chemin.TECHNOLOGIES_PUBLIQUES,
 					TECHNOLOGIES_PUBLIQUES);
 		} else
@@ -1534,7 +1560,7 @@ public class Univers {
 	}
 
 	public static void phaseSuivante() {
-		PHASE = new Integer(PHASE.intValue() + 1);
+		PHASE = Integer.valueOf(PHASE.intValue() + 1);
 	}
 
 	// pour gérer les ordres non conformes(erreur de programme,répétition de
